test: update test scenario at oracle nosql
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>